--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <meta name="google-signin-client_id" content="417248184044-i14u18vrdfs0t4pdh5jdmlic4ilmirmp.apps.googleusercontent.com"/>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/client.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -31,7 +32,13 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    
+    <script type = "text/javascript">
+        var CLIENT_ID = '417248184044-i14u18vrdfs0t4pdh5jdmlic4ilmirmp.apps.googleusercontent.com';
+        var API_KEY = 'AIzaSyAAH99boIxpg7RbgU_5lfrTfzzE35fwg3I';
+
+        var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
+        var SCOPES = "https://www.googleapis.com/auth/calendar.readonly";
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
